k8s/base/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: retail-store
spec:
  selector:
    app: ui
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
